# curso-agno

./: .env  0.llm_call.py  1.1.researcher.py  1.2.analista.py  13_own_tools.py  21_pdf_agent.py  pyproject.toml
tmp/: agent.db
